# T-desktop

./: .gitignore  CMakeLists.txt  README.md  stremio.rc
.github/cmake/: unofficial-webview2-config-version.cmake  unofficial-webview2-config.cmake
.github/workflows/: build-release.yml  build.yml
src/: main.cpp  resource.h
src/core/: globals.cpp  globals.h
src/mpv/: player.cpp  player.h
src/node/: server.cpp  server.h
src/tray/: tray.cpp  tray.h
src/ui/: mainwindow.cpp  mainwindow.h  splash.cpp  splash.h
src/updater/: updater.cpp  updater.h
src/utils/: config.cpp  config.h  crashlog.cpp  crashlog.h  discord.cpp  discord.h  extensions.cpp  extensions.h  helpers.cpp  helpers.h
src/webview/: webview.cpp  webview.h
utils/windows/installer/: windows-installer.nsi
version/: version-details.json  version.json
